<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/foodRunner_bg"
    android:scrollbars="vertical"
    tools:context=".fragment.FAQsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtQuestionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_one"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAnswerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/answer_one"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/txtQuestionTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_two"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAnswerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/answer_two"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/txtQuestionThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_three"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAnswerThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/answer_three"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/txtQuestionFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_four"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAnswerFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/answer_four"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/txtQuestionFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_five"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAnswerFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/answer_five"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/txtQuestionSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_six"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAnswerSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/answer_six"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>


</ScrollView>
