<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#246EE9"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:src="@drawable/food_runner_logo" />

    <EditText
        android:id="@+id/etMobileNumberLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/boxbg"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"
        android:hint="@string/mobile_number_et"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="10dp"/>
<!--        android:drawableLeft="@drawable/mobile_phone_logo"/>-->

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/boxbg"
        android:hint="@string/password_et"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:inputType="textPassword"
        android:maxLength="10"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:backgroundTint="#1a237e"
        android:padding="10dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="260dp"
        android:text="@string/sign_up_et"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>